# bundle_adjustment_test

./: .gitignore
ba_cpp/: CMakeLists.txt  camera_calibration_result copy.json  camera_calibration_result.json  pose.txt
ba_cpp/points/: point0.txt  point1.txt  point10.txt  point100.txt  point101.txt  point102.txt  point103.txt  point104.txt  point105.txt  point106.txt  point107.txt  point108.txt  point109.txt  point11.txt  point110.txt  point111.txt  point112.txt  point113.txt  point114.txt  point115.txt  point116.txt  point117.txt  point118.txt  point119.txt  point12.txt  point120.txt  point121.txt  point122.txt  point123.txt  point124.txt  point125.txt  point126.txt  point127.txt  point128.txt  point129.txt  point13.txt  point130.txt  point131.txt  point132.txt  point133.txt  (+437 more)
ba_cpp/rendering/opengl/: camera.cpp  opengl_rendering.cpp  opengl_rendering.h
ba_cpp/rendering/shaders/point/: fragment_shader.fs
ba_cpp/src/: ba.cpp  calibration.cpp  calibration_test.cpp
ba_cpp/tools/: image_processing.cpp  image_processing.h  params.cpp  params.h  slam.cpp  slam.h  utils.h
calibration/: CMakeLists.txt  camera_calibration_result.json  main  main.cpp  reference.cpp
calibration/src/: ba.cpp  main.cpp
calibration/tools/: params.h
matlab/: read_data.m  read_point.m
